--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,11 @@
     <string name="day_thu">Thu</string>
     <string name="day_fri">Fri</string>
     <string name="day_sat">Sat</string>
+    <string name="button_back">Back</string>
+    <string name="button_settings">Settings</string>
+    <string name="button_ambient_mode">Turn on ambient mode</string>
     <string name="am" translatable="false">AM</string>
     <string name="pm" translatable="false">PM</string>
-    <string name="ic_open_source_licences">Open source licences</string>
     <string name="hint_storage_permission_explanation_1">"We need storage permission to read pictures in "</string>
     <string name="hint_storage_permission_explanation_2">.</string>
     <string name="hint_directory_name_occupied_1">Directory path</string>
