--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,21 +14,27 @@
     <string name="hint_directory_name_occupied_2">被同名文件占用，请在文件管理器中检查该目录。</string>
     <string name="hint_failed_to_create_directory_1">无法创建</string>
     <string name="hint_failed_to_create_directory_2">目录。</string>
-    <string name="hint_cannot_clear_nomedia_1">""</string>
+    <string name="hint_cannot_clear_nomedia_1">目录</string>
     <string name="hint_cannot_clear_nomedia_2">包含.nomedia文件。请备份文件并删除该文件夹。</string>
     <string name="hint_no_available_files_1">在</string>
     <string name="hint_no_available_files_2">中未发现可用的图片。</string>
     <string name="button_back">返回</string>
     <string name="button_settings">设置</string>
     <string name="button_ambient_mode">进入待机模式</string>
-    <string name="menu_sensitivity">操作灵敏度</string>
-    <string name="desc_sensitivity">下拉刷新等操作的灵敏度</string>
-    <string name="menu_performance">性能与稳定性</string>
-    <string name="desc_performance">图片质量</string>
-    <string name="menu_timeout">时长</string>
-    <string name="desc_timeout">何时待机、切换图片等</string>
-    <string name="menu_night">夜间行为</string>
-    <string name="desc_night">何时不再保持屏幕开启</string>
-    <string name="menu_brightness">亮度</string>
-    <string name="desc_brightness">主界面各组件的亮度</string>
+    <string name="settings_sensitivity">操作灵敏度</string>
+    <string name="settings_sensitivity_desc">下拉刷新等操作的灵敏度</string>
+    <string name="settings_performance">性能与稳定性</string>
+    <string name="settings_performance_desc">图片质量</string>
+    <string name="settings_timeout">时长</string>
+    <string name="settings_timeout_desc">何时待机、切换图片等</string>
+    <string name="settings_night">夜间行为</string>
+    <string name="settings_night_desc">何时不再保持屏幕开启</string>
+    <string name="settings_brightness">亮度</string>
+    <string name="settings_brightness_desc">主界面各组件的亮度</string>
+    <string name="settings_brightness_tab_normal">常规</string>
+    <string name="settings_brightness_tab_ambient">待机</string>
+    <string name="settings_brightness_text_brightness">文字亮度</string>
+    <string name="settings_brightness_bg_brightness">背景亮度</string>
+    <string name="settings_brightness_min_desc">待机状态的最大亮度</string>
+    <string name="settings_brightness_max_desc">常规状态的最小亮度</string>
 </resources>
