--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,20 +23,28 @@
     <string name="hint_cannot_clear_nomedia_2">. Please backup files and delete the folder.</string>
     <string name="hint_no_available_files_1">"No available photos found in "</string>
     <string name="hint_no_available_files_2">.</string>
-    <string name="settings_sensitivity">Operating Sensitivity</string>
+    <string name="settings_sensitivity">Operating sensitivity</string>
     <string name="settings_sensitivity_desc">Sensitivity of pull down refreshing etc.</string>
     <string name="settings_performance">Performance and stability</string>
     <string name="settings_performance_desc">Image quality</string>
     <string name="settings_timeout">Timeout</string>
     <string name="settings_timeout_desc">When to go ambient, switch image, etc.</string>
     <string name="settings_night">Night behavior</string>
-    <string name="settings_night_desc">When to stop from keeping on</string>
+    <string name="settings_night_desc">Behavior when in low light condition</string>
     <string name="settings_brightness">Brightness</string>
     <string name="settings_brightness_desc">Brightness of main interface components</string>
     <string name="settings_brightness_tab_normal">Normal</string>
     <string name="settings_brightness_tab_ambient">Ambient</string>
     <string name="settings_brightness_text_brightness">Text brightness</string>
     <string name="settings_brightness_bg_brightness">Background brightness</string>
-    <string name="settings_brightness_min_desc">Min Brightness of ambient mode</string>
-    <string name="settings_brightness_max_desc">Max Brightness of normal mode</string>
+    <string name="settings_brightness_min_desc">Min brightness of ambient mode</string>
+    <string name="settings_brightness_max_desc">Max brightness of normal mode</string>
+    <string name="settings_performance_image_quality">Image quality</string>
+    <string name="settings_performance_quality_level">Quality level</string>
+    <string name="settings_performance_image_quality_level_hint">Adjust and check the result in the card. \nTrun higher for more resolution, or lower for more stability. \nStability may differ between devices. </string>
+    <string name="settings_performance_display_resolution">Display resolution</string>
+    <string name="settings_performance_image_resolution">Image resolution</string>
+    <string name="settings_timeout_picker_hour">h</string>
+    <string name="settings_timeout_picker_minute">m</string>
+    <string name="settings_timeout_picker_second">s</string>
 </resources>
